--- a/EX03/app/src/main/AndroidManifest.xml
+++ b/EX03/app/src/main/AndroidManifest.xml
@@ -10,20 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EX02"
+        android:theme="@style/Theme.Ex03"
         tools:targetApi="31">
-        <activity
-            android:name=".MyAdapter"
-            android:exported="false" />
-        <activity
-            android:name=".activity_country"
-            android:exported="false" />
-        <activity
-            android:name=".Country"
-            android:exported="false" />
-        <activity
-            android:name=".Subactivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
